{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 36,
  "lineage": "76388fc8-c774-83b7-e775-a52d72c5cc2d",
  "resources": [
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "this",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783764577442:route-table/rtb-043d485064cffc718",
            "default_route_table_id": "rtb-043d485064cffc718",
            "id": "rtb-043d485064cffc718",
            "owner_id": "783764577442",
            "propagating_vgws": null,
            "region": "ap-south-1",
            "route": [
              {
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6a6abdf592df952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783764577442:internet-gateway/igw-0a9b6a95dca8624cd",
            "id": "igw-0a9b6a95dca8624cd",
            "owner_id": "783764577442",
            "region": "ap-south-1",
            "tags": {
              "Name": "Production-VPC-Project-igw"
            },
            "tags_all": {
              "Name": "Production-VPC-Project-igw"
            },
            "vpc_id": "vpc-0a6a6abdf592df952"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl-public-subnet",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783764577442:network-acl/acl-0af3ed930c2b602de",
            "egress": [],
            "id": "acl-0af3ed930c2b602de",
            "ingress": [],
            "owner_id": "783764577442",
            "region": "ap-south-1",
            "subnet_ids": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0a6a6abdf592df952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "nacl-associate-public-subnet",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-09907179210211181",
            "network_acl_id": "acl-0af3ed930c2b602de",
            "region": "ap-south-1",
            "subnet_id": "subnet-00ca731f3c267436e"
          },
          "dependencies": [
            "module.vpc-module.aws_network_acl.nacl-public-subnet",
            "module.vpc-module.aws_subnet.public",
            "module.vpc-module.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl-public-subnet-1-allow-all-egress",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1512659471",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0af3ed930c2b602de",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_network_acl.nacl-public-subnet",
            "module.vpc-module.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nacl-public-subnet-1-allow-all-ingress",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3409704790",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0af3ed930c2b602de",
            "protocol": "-1",
            "region": "ap-south-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_network_acl.nacl-public-subnet",
            "module.vpc-module.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public_sb",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783764577442:route-table/rtb-0d5d4b8ed6f4046fc",
            "id": "rtb-0d5d4b8ed6f4046fc",
            "owner_id": "783764577442",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a9b6a95dca8624cd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Production-VPC-Project-public-sunbet-rt"
            },
            "tags_all": {
              "Name": "Production-VPC-Project-public-sunbet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6a6abdf592df952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.this",
            "module.vpc-module.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063a58da154ebfffe",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d5d4b8ed6f4046fc",
            "subnet_id": "subnet-00ca731f3c267436e"
          },
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.this",
            "module.vpc-module.aws_route_table.route_table_public_sb",
            "module.vpc-module.aws_subnet.public",
            "module.vpc-module.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783764577442:subnet/subnet-00ca731f3c267436e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ca731f3c267436e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783764577442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Production-VPC-Project-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Production-VPC-Project-Public-Subnet-1"
            },
            "vpc_id": "vpc-0a6a6abdf592df952"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc-module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:783764577442:vpc/vpc-0a6a6abdf592df952",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e23d323f1936d5c2",
            "default_route_table_id": "rtb-043d485064cffc718",
            "default_security_group_id": "sg-0e4e79e38276c5b5a",
            "dhcp_options_id": "dopt-07c20b13c3d435d78",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6a6abdf592df952",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-043d485064cffc718",
            "owner_id": "783764577442",
            "region": "ap-south-1",
            "tags": {
              "Name": "Production-VPC-Project-vpc"
            },
            "tags_all": {
              "Name": "Production-VPC-Project-vpc"
            }
          }
        }
      ]
    }
  ]
}